# zazaki_scp

./: .gitignore  CMakeLists.txt  README.md
docs/superpowers/plans/: 2026-07-03-zazaki-scp-implementation-plan.md
docs/superpowers/specs/: 2026-07-03-zazaki-scp-design.md
src/: main.cpp  progress_renderer.cpp  progress_renderer.hpp  scp_cli.cpp  scp_cli.hpp
tests/integration/: end_to_end_test.cpp
tests/unit/: progress_renderer_test.cpp  scp_cli_test.cpp
